[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
itertools = { version = "0.12.0", features = [] }
array2d = "0.3.0"
memoize = "0.4.1"
timeit = "0.1.2"
pariter = "0.5.1"
rayon = "1.8.0"
factorize = "0.1.2"
prime_factorization = "1.0.4"
